# AprilTag_CUDA_X86

./: .gitattributes  .gitignore  CHANGES.md  COMPARISON_VIDEO_VS_GUI.md  CONFIG_FILE_README.md  CRASH_DEBUGGING_REPORT.md  FAST_APRILTAG_CLASS_ARCHITECTURE.md  FAST_APRILTAG_PORT_PLAN.md  FFMPEG_IMPLEMENTATION_COMPLETE.md  FFMPEG_IMPLEMENTATION_STATUS.md  FILTERING_ANALYSIS.md  FILTERING_COMPARISON.md  FRAME_PREFETCHING_EXPLANATION.md  FRAME_PREFETCHING_IMPLEMENTATION.md  FRAME_PREFETCHING_STATUS.md  GIT_SETUP.md  GPU_PORT_ASSESSMENT.md  OPTIMIZATION_OPPORTUNITIES.md  PERFORMANCE_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.txt  PUSH_COMMANDS.md  PUSH_INSTRUCTIONS.md  README.md  README_TESTING.md  VIDEO_CAPTURE_ALTERNATIVES.md  analyze_filtered_frames.cu  analyze_performance.py  analyze_timing.py  compare_results.py  config.json  config.txt  instructions.md  instructions2.md  push_to_github.sh  setup_env.sh  test_performance.sh
input/: Moving.avi  Stable.avi
libs/: README.txt
reports/: ANALYSIS_SUMMARY.md  COMPARISON_TABLE.txt  COORDINATE_DEBUG_SUMMARY.txt  COORDINATE_FIX_STATUS.txt  COORDINATE_FIX_SUMMARY.txt  COORDINATE_TRANSFORMATION_ANALYSIS.txt  CPU_GPU_DIFFERENCES_SUMMARY.txt  CPU_VS_CUDA_COMPARISON.txt  DETAILED_TIMING_ANALYSIS.md  FIXED_VIDEO_NOTES.txt  MOVING_TIMING_AFTER_DISPLAY_THREAD.txt  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_TIMING_REPORT.md  README.md  REPO_CLEANUP_SUMMARY.md  STABLE_TIMING_AFTER_DISPLAY_THREAD.txt  THREADING_ARCHITECTURE_AND_TEST_RESULTS.md  VIDEO_OUTPUT_SUMMARY.txt  VISUALIZATION_UPDATE_SUMMARY.md  comparison_test_quad_decimate_2.5_20251216_213502_summary_performance_analysis_vs_test_quad_decimate_2.5_20251216_213502_summary.txt  cpu_gpu_comparison_stable.txt  detailed_timing_analysis_20251216_212640_summary.txt  detection_report.txt  stable_timing_current.txt  test_filtered_analysis.txt  test_lost_frames.txt  test_quad_decimate_2.5_20251216_213502.txt  test_quad_decimate_2.5_20251216_213502_summary.txt  test_results_20251216_204123.txt  test_results_20251216_204123_summary.txt  test_results_20251216_212325_summary.txt  test_with_config_summary.txt  test_with_frame_stats_20251216_204630_summary.txt  test_with_prefetching_20251216_214245.txt
src/apriltags_cuda/: CMakeLists.txt  Dockerfile  README.md  install_deps.sh  ntp.sh
src/apriltags_cuda/.github/workflows/: cmake-single-platform.yml  cpp-linter.yml
src/apriltags_cuda/Installer/: AprilTagsPipeline.service  README.md  install.sh  uninstall.sh
src/apriltags_cuda/Installer/AprilTags/: AprilTagsManager.sh  args
src/apriltags_cuda/data/: camlocations  robot.txt
src/apriltags_cuda/data/calibration/: calibrationmatrix_100.json  calibrationmatrix_1690.json  calibrationmatrix_199.json  calibrationmatrix_766.json  calibrationmatrix_Module_YL20230518V0.json  calibrationmatrix_UC762.json  calibrationmatrix_UC7626.json  calibrationmatrix_UC762W.json  calibrationmatrix_cam11.json  calibrationmatrix_cam12.json  calibrationmatrix_cam13.json  calibrationmatrix_cam14.json  calibrationmatrix_cam15.json
src/apriltags_cuda/data/camlocs/: cam-left_front-offset.json  readme.md  reva-left_back-offset.json  reva-left_front-offset.json  reva-right_back-offset.json  reva-right_front-offset.json  revb-left_back-offset.json  revb-left_front-offset.json  revb-right_back-offset.json  revb-right_front-offset.json  ribeye-TESTING.json
src/apriltags_cuda/doc/: rotations.tex
src/apriltags_cuda/public/: index.html
src/apriltags_cuda/src/: BooleanValueSender.cpp  BooleanValueSender.h  DoubleArraySender.cpp  DoubleArraySender.h  DoubleArraySubscriber.cpp  DoubleArraySubscriber.h  DoubleValueSender.cpp  DoubleValueSender.h  IntegerArraySender.cpp  IntegerArraySender.h  IntegerValueSender.cpp  IntegerValueSender.h  NetworkTablesConfig.h  NetworkTablesUtil.cpp  NetworkTablesUtil.h  TagDetectionIPC.h  apriltag_detect.cu  apriltag_gpu.cu  apriltag_gpu.h  apriltag_utils.cu  apriltag_utils.h  cameraexception.h  cuda_frc971.cu  cuda_frc971.h  gpu_detector_test.cu  gpu_image.h  json_test.cpp  labeling_allegretti_2019_BKE.cu  labeling_allegretti_2019_BKE.h  line_fit_filter.cu  line_fit_filter.h  opencv_cuda_demo.cu  points.cu  points.h  robot_rotations.py  test_robot_rotations.py  threshold.cu  threshold.h  transform_output_iterator.h  video_processor.cu  (+4 more)
src/apriltags_cuda/tools/: adjust_image_brightness.cpp  analyze_tag_decode.cpp  camera_gpu_detect.cu  camera_gui.cpp  camera_gui_qt.cpp  camera_visualize_fixed.cu  compare_detectors.cu  compare_homography.cpp  compare_pattern_extraction.cpp  compare_quads_side_by_side.cpp  config_parser.h  debug_contour_detection.cpp  debug_coordinate_pipeline.cu  debug_coordinates.cu  debug_corner_homography.cpp  debug_detection_stages.cpp  debug_edge_detection.cpp  debug_pattern_extraction.cpp  debug_tag_filtering.cpp  debug_undistorted_detection.cpp  extract_test_frames.cu  ffmpeg_video_reader.cpp  ffmpeg_video_reader.h  hamming_decode.cpp  simple_camera_detect.cpp  test_camera_read.cpp  test_camera_read_optimized.cpp  test_camera_read_threaded.cpp  test_detection_on_adjusted.cpp  test_image_detect.cpp  test_specific_frames.cu  video_bench.cu  video_visualize.cu  video_visualize_cpu.cu  video_visualize_fixed.cu  visualize_hamming_decode.cpp  visualize_hamming_mirror.cpp
src/apriltags_cuda/web/: index.html
test_results/: QUAD_DECIMATE_2.5_COMPARISON.md  QUAD_DECIMATE_LIMITATION.md  comparison_final_analysis_test_vs_test_less_aggressive_filtering.txt  detailed_timing_analysis_20251216_212640.txt  detailed_timing_analysis_20251216_212640_performance_analysis.txt  detailed_timing_analysis_20251216_212640_summary_performance_analysis.txt  final_analysis_test.txt  final_analysis_test_summary.txt  final_complete_test.txt  final_complete_test_summary.txt  final_test_results.txt  final_test_results_summary.txt  lost_frames_list.txt  prefetch_test_output.txt  test_before_after_filtering.txt  test_before_after_filtering_summary.txt  test_less_aggressive_filtering.txt  test_less_aggressive_filtering_summary.txt  test_results_20251216_212325.txt  test_with_config.txt  (+1 more)
(+2 files in other folders)
